[package]
name = "vsprintf"
version = "2.0.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Rust bindings to the libc vsprintf function"
license = "MIT"
documentation = "https://docs.rs/vsprintf"
repository = "https://github.com/dylanmckay/vsprintf"
readme = "README.md"

keywords = ["vsprintf", "sprintf", "printf", "va_list", "va_arg"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
